--- a/index.css
+++ b/index.css
@@ -11,7 +11,10 @@ html {
 #name1 {
 	font-family: "Roboto Medium", monospace;
 	color: black;
+}
 
+#section-2 {
+	background: white;
 }
 
 #about-me {
@@ -72,8 +75,6 @@ html {
 	font-weight: 900;
 	text-align: center;
 	font-style: italic;
-
-
 }
 
 #contact-me {
@@ -83,8 +84,6 @@ html {
 	text-align: center;
 	font-style: italic;
 }
-
-
 
 #pre-footer {
 	background-color: #000000;
