--- a/index.css
+++ b/index.css
@@ -106,13 +106,13 @@ html {
 }
 
 #contactboxtext1 {
-	font-family: "Roboto";
+	font-family: "Roboto", monospace;
 	font-size: 50px;
 	color: white;
 }
 
 #contactboxbutton1 {
-	font-family: "IBM Plex Sans";
+	font-family: "IBM Plex Sans", monospace;
 	border-radius: 10px;
 	margin: 10pt;
 	font-weight: bold;
@@ -120,30 +120,31 @@ html {
 }
 
 #contactboxtext2 {
-	font-family: "IBM Plex Sans";
+	font-family: "IBM Plex Sans", monospace;
 	font-size: 15px;
 	font-style: italic;
 }
 
 #contactboxbutton2 {
-	font-family: "IBM Plex Sans";
+	font-family: "IBM Plex Sans", monospace;
 	border-radius: 30px;
 	font-weight: bold;
 	color: black;
 }
 
 #exampleModal {
-	font-family: "Roboto";
+	font-family: "Roboto", monospace;
 	border-radius: 30px;
 }
 
 #modalbutton1 {
 	color: white;
-	font-family: "IBM Plex Sans";
+	font-family: "IBM Plex Sans", monospace;
 	border-radius: 30px;
 }
 
 #footertext1 {
 	font-family: "Roboto Medium", monospace;
-	color: black;
+	color: black; 
+	
 }
