--- a/index.css
+++ b/index.css
@@ -145,6 +145,13 @@ html {
 
 #footertext1 {
 	font-family: "Roboto Medium", monospace;
-	color: black; 
-	
+	color: #2C3333;
+}
+
+#footertext2 {
+	font-family: "IBM Plex Sans", monospace;
+	font-size: 20px;
+	font-weight: bold;
+	color: #2C3333;
+
 }
