--- a/index.css
+++ b/index.css
@@ -155,3 +155,12 @@ html {
 	color: #2C3333;
 	padding-bottom: 0;
 }
+
+#footer {
+	background-color: white;
+	font-family: "Roboto Light", monospace;
+	color: #2C3333;	
+	text-align: center;
+	font-weight: bold;
+	font-size: 1rem;
+}
