Justify the About Me section

--- a/index.css
+++ b/index.css
@@ -60,6 +60,7 @@ html {
 #abouttext2 {
 	font-family: "Roboto Light", monospace;
 	font-size: 20px;
+	font-style: italic;
 }
 
 .paragraph-about-me  {
